post and comment votes work, gibberish post ids redirect to 404 page
