# SimpleSocialNetworkBack/Business/Models/Requests/VotePost.cs
@@ -1,0 +1,11 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace Business.Models.Requests
+{
+    public class VotePost
+    {
+        [Required] public int PostId { get; set; }
+
+        [Required] public VoteType VoteType { get; set; }
+    }
+}
