# SimpleSocialNetworkBack/Business/Models/Requests/VoteType.cs
@@ -1,0 +1,8 @@
+namespace Business.Models.Requests
+{
+    public enum VoteType
+    {
+        Up = 1,
+        Down = 2,
+    }
+}
